--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ html {
   margin-top: 20px;
   border-radius: 100%;
   background-color: #fff;
-  background-image: url("/avatar/ibrahim_bidi.jpg");
+  background-image: url("https://avatars.githubusercontent.com/u/1431864?v=4");
   background-size: cover;
   border: 10px #ffc107 solid;
 }
